8247352: improve error messages for sealed classes and records
Reviewed-by: mcimadamore